removed untranslated words

--- a/apps/storefront/public/locales/mn/footer.json
+++ b/apps/storefront/public/locales/mn/footer.json
@@ -1,9 +1,4 @@
 {
-	"link-about-us": "About Us",
-	"link-announcements": "Announcements",
-	"link-answer-center": "Answer center",
-	"link-contact-us": "Contact Us",
-	"link-copyright": "Copyright",
 	"link-customer-support": "Хэрэглэгчийн дэмжлэг",
 	"link-discussion-boards": "Хэлэлцүүлгийн самбарууд",
 	"link-email": "yourexample@email.com",
@@ -11,33 +6,5 @@
 	"link-exchanges": "Буцах & Солилцоо",
 	"link-facebook": "Facebook",
 	"link-faq": "Түгээмэл асуулт, тусламж",
-	"link-giving-works": "Бүтээл өгөх",
-	"link-instagram": "Instagram",
-	"link-kids-wear": "Kid's Wear",
-	"link-men-wear": "Men's Wear",
-	"link-phone": "Call us: +1 254 568-5479",
-	"link-privacy": "Privacy policy update",
-	"link-return-policy": "Return Policy",
-	"link-shipping": "Shipping & Delivery",
-	"link-site-map": "Site Map",
-	"link-sports-wear": "Sports Wear",
-	"link-support-center": "Support Center",
-	"link-terms": "Terms & conditions",
-	"link-twitter": "Twitter",
-	"link-women-wear": "Women's Wear",
-	"link-youtube": "Youtube",
-	"payment-jcb": "JCB",
-	"payment-master-card": "Master Card",
-	"payment-paypal": "Paypal",
-	"payment-skrill": "Skrill",
-	"payment-visa": "Visa",
-	"text-all-rights-reserved": "All rights reserved",
-	"text-copyright": "Copyright",
-	"widget-title-about": "About",
-	"widget-title-community": "Community",
-	"widget-title-contact": "Contact",
-	"widget-title-customer-care": "Customer Care",
-	"widget-title-our-information": "Our Information",
-	"widget-title-social": "Social",
-	"widget-title-top-categories": "Top Categories"
+	"link-giving-works": "Бүтээл өгөх"
 }
