--- a/apps/storefront/public/locales/mn/forms.json
+++ b/apps/storefront/public/locales/mn/forms.json
@@ -9,56 +9,8 @@
 	"error-email-format": "Өгөгдсөн имэйл хаягийн формат буруу байна",
 	"error-email-required": "Та имэйл хаягаа оруулах шаардлагатай",
 	"error-min-code": "Код хамгийн багадаа 6 тэмдэгттэй байх ёстой",
-	"error-name-required": "Name is required",
-	"error-subject-required": "What subject do you want to discuss with us?",
 	"first-name-required": "Нэрийг оруулах шаардлагатай",
 	"label-address": "Хаяг",
 	"label-city": "Хот/Хот",
-	"label-confirm-password-star": "Нууц үгээ баталгаажуулах*",
-	"label-country": "Country",
-	"label-display-name": "Display Name *",
-	"label-email": "Email",
-	"label-email-required": "Your Email (required)",
-	"label-email-star": "Email *",
-	"label-female": "Female",
-	"label-first-name": "First Name *",
-	"label-last-name": "Last Name *",
-	"label-male": "Male",
-	"label-message": "Message",
-	"label-message-star": "Message *",
-	"label-name": "Name",
-	"label-name-required": "Your Name (required)",
-	"label-name-star": "Name *",
-	"label-new-password": "New Password",
-	"label-new-password-star": "New Password*",
-	"label-old-password": "Old Password",
-	"label-old-password-star": "Old Password*",
-	"label-order-notes": "Order Notes (Optional)",
-	"label-password": "Password",
-	"label-password-star": "Password*",
-	"label-phone": "Phone/Mobile",
-	"label-postcode": "Postcode",
-	"label-remember-me": "Remember me",
-	"label-save-information": "Save this information for next time",
-	"label-save-review-information": "Save my name, email, and website in this browser for the next time I comment.",
-	"label-state": "State",
-	"label-street-address": "Street Address",
-	"label-subject": "Subject",
-	"label-subject-star": "Subject*",
-	"label-your-rating": "Your Rating *",
-	"last-name-required": "Last name is required",
-	"name-required": "Name is required",
-	"name-subject": "Your subject is required",
-	"password-new-required": "New password is required",
-	"password-old-required": "Old password is required",
-	"password-required": "Password is required",
-	"phone-required": "Phone number is required",
-	"placeholder-email": "Enter Your Email",
-	"placeholder-email-subscribe": "Write your email here",
-	"placeholder-message": "Write your message here",
-	"placeholder-name": "Enter Your Name",
-	"placeholder-order-notes": "Notes about your order, e.g. special notes for delivery",
-	"placeholder-search": "Search...",
-	"placeholder-subject": "Enter Your Subject",
-	"text-login-mobile": "Login with Mobile Number"
+	"label-confirm-password-star": "Нууц үгээ баталгаажуулах*"
 }
