--- a/apps/storefront/public/locales/mn/menu.json
+++ b/apps/storefront/public/locales/mn/menu.json
@@ -1,75 +1,16 @@
 {
 	"menu-404": "404",
-	"menu-admin": "Admin",
-	"menu-backpacks": "Backpacks",
-	"menu-belt-scarves": "Belt, Scarves & More",
-	"menu-blazers": "Blazers",
-	"menu-blazwers-coats": "Blazwers & Coats",
 	"menu-boots": "Гутал",
 	"menu-bra": "Хөхний даруулга",
-	"menu-briefs": "Briefs",
-	"menu-casual-shirts": "Casual Shirts",
-	"menu-casual-shoes": "Casual Shoes",
-	"menu-casual-wear": "Casual Wear",
 	"menu-category": "Ангилал",
-	"menu-checkout": "Checkout",
-	"menu-classic": "Classic",
-	"menu-clothing": "Clothing",
-	"menu-collection": "Collection",
 	"menu-contact-us": "Холбоо барих",
-	"menu-demos": "Demos",
-	"menu-dresses": "Dresses",
-	"menu-elegant": "Elegant",
-	"menu-faq": "FAQ",
-	"menu-fashion": "Fashion",
-	"menu-fashion-jewellers": "Fashion Jewellers",
-	"menu-fine-jewellers": "Fine Jewellers",
-	"menu-flats": "Flats",
-	"menu-footwear": "Footwear",
 	"menu-forget-password": "Нууц үг сэргээх",
-	"menu-formal-shirts": "Formal Shirts",
-	"menu-gadgets": "Gadgets",
-	"menu-handbags-wallets": "Handbags & Wallets",
-	"menu-headphones": "Headphones",
-	"menu-heels": "Heels",
-	"menu-jackets": "Jackets",
-	"menu-jewellers": "Jewellers",
-	"menu-jumpsuits": "Jumpsuits",
-	"menu-lingerie-sleepwear": "Lingerie & Sleepwear",
-	"menu-lipsticks": "Lipsticks",
-	"menu-makeup": "Makeup",
-	"menu-men-wear": "Men Wear",
-	"menu-minimal": "Minimal",
-	"menu-modern": "Modern",
 	"menu-my-account": "Хэрэглэгч",
 	"menu-order": "Захиалга",
 	"menu-pages": "Хуудаснууд",
-	"menu-plus-size": "Plus Size",
-	"menu-premium-beauty": "Premium Beauty",
-	"menu-privacy-policy": "Privacy Policy",
-	"menu-refined": "Refined",
 	"menu-search": "Хайх",
-	"menu-shops": "Shops",
-	"menu-shorts-skirts": "Shorts & Skirts",
-	"menu-shurgs": "Shurgs",
 	"menu-sign-in": "Нэвтрэх",
 	"menu-sign-up": "Бүртгүүлэх",
-	"menu-skincare": "Skincare",
-	"menu-sleepwear": "Sleepwear",
-	"menu-smart-wearables": "Smart Wearables",
-	"menu-sports-accessories": "Sports Accessories",
-	"menu-sports-active-wear": "Sports & Active Wear",
-	"menu-standard": "Standard",
-	"menu-suits": "Suits",
-	"menu-sunglasses-frames": "Sunglasses & Frames",
-	"menu-t-shirt": "T-Shirt",
-	"menu-terms-condition": "Terms & Condition",
-	"menu-top-wear": "Top Wear",
-	"menu-tops-shirts": "Tops, T-Shirts & Shirts",
 	"menu-trendy": "Trendy",
-	"menu-users": "Хэрэглэгчид",
-	"menu-vintage": "Vintage",
-	"menu-watches-wearables": "Watches & Wearables",
-	"menu-western-wear": "Western Wear",
-	"menu-women-wear": "Women Wear"
+	"menu-users": "Хэрэглэгчид"
 }
