Added untranslated keys

--- a/apps/storefront/public/locales/mn/common.json
+++ b/apps/storefront/public/locales/mn/common.json
@@ -5,6 +5,24 @@
 	"CHAWKBAZAR_ERROR.INVALID_CREDENTIALS": "Хэрэгэлэгчийн нэр эсвэл нууц үг буруу",
 	"CHAWKBAZAR_ERROR.NOT_AUTHORIZED": "Зөвшөөрөлгүй",
 	"CHAWKBAZAR_ERROR.NOT_FOUND": "Имэйл хаягийг ямар ч хэрэглэгчийн бүртгэлд өгөөгүй",
+	"CHAWKBAZAR_ERROR.OPERATION_NOT": "Үйл ажиллагаа Үгүй",
+	"CHAWKBAZAR_ERROR.OTP_SEND_FAIL": "OTP илгээж чадсангүй",
+	"CHAWKBAZAR_ERROR.OTP_VERIFICATION_FAILED": "OTP баталгаажуулалт амжилтгүй боллоо",
+	"CHAWKBAZAR_ERROR.PAYMENT_FAILED": "Төлбөр амжилтгүй боллоо",
+	"CHAWKBAZAR_ERROR.PLEASE_LOGIN_USING_FACEBOOK_OR_GOOGLE": "Facebook эсвэл Google ашиглан нэвтэрнэ үү",
+	"CHAWKBAZAR_ERROR.SHOP_NOT_APPROVED": "Дэлгүүр зөвшөөрөгдөөгүй",
+	"CHAWKBAZAR_ERROR.SOMETHING_WENT_WRONG": "Ямар нэгэн зүйл буруугаар эргэсэн",
+	"CHAWKBAZAR_ERROR.WITHDRAW_MUST_BE_ATTACHED_TO_SHOP": "Татан авалтыг дэлгүүрт хавсаргасан байх ёстой",
+	"CHAWKBAZAR_MESSAGE.CHECK_INBOX_FOR_PASSWORD_RESET_EMAIL": "Нууц үг шинэчлэх имэйлийг ирсэн имэйлээс шалгана уу",
+	"CHAWKBAZAR_MESSAGE.EMAIL_SENT_SUCCESSFUL": "Имэйлийг амжилттай илгээсэн",
+	"CHAWKBAZAR_MESSAGE.INVALID_CREDENTIALS": "Өгөгдсөн итгэмжлэл хүчингүй байна",
+	"CHAWKBAZAR_MESSAGE.INVALID_TOKEN": "Токен хүчингүй байна",
+	"CHAWKBAZAR_MESSAGE.NOT FOUND": "",
+	"CHAWKBAZAR_MESSAGE.NOT_FOUND": "Имэйл хаягийг ямар ч хэрэглэгчийн бүртгэлд өгөөгүй",
+	"CHAWKBAZAR_MESSAGE.OLD_PASSWORD_INCORRECT": "Нууц үг буруу байна",
+	"CHAWKBAZAR_MESSAGE.PASSWORD_RESET_SUCCESSFUL": "Нууц үг шинэчлэх амжилттай",
+	"CHAWKBAZAR_MESSAGE.SOMETHING_WENT_WRONG": "Ямар нэгэн зүйл буруугаар эргэсэн",
+	"CHAWKBAZAR_MESSAGE.TOKEN_IS_VALID": "Токен хүчинтэй",
 	"add-to-cart": "Сагсанд нэмсэн",
 	"app-heading": "The ChawkBazar App",
 	"app-sub-heading": "<span> Share Your <strong>Ideas</strong> &amp; Shop Endless <strong>Inspiration</strong> </span>",
@@ -29,5 +47,269 @@
 	"button-view": "Харах",
 	"button-view-collection": "Цуглуулга үзэх",
 	"button-women-exclusive": "#Эмэгтэйчүүд онцгой",
-	"text-page-contact-us": "Холбоо барих"
+	"collection-description-four": "Студиос гудамж хүртэл бидний цуглуулгыг техникийн, өндөр гүйцэтгэлтэй идэвхтэй хийдэг",
+	"collection-description-one": "Хаврын улиралд тийм гэж хэлэх эцэс төгсгөлгүй олон талт шинэ загварууд. Улирал тод харагдаж байна.",
+	"collection-description-three": "Хаврын улиралд тийм гэж хэлэх эцэс төгсгөлгүй олон талт шинэ загварууд. Улирал тод харагдаж байна.",
+	"collection-description-two": "Хаврын улиралд тийм гэж хэлэх эцэс төгсгөлгүй олон талт шинэ загварууд. Улирал тод харагдаж байна.",
+	"collection-title-four": "Үдэшлэг хийхэд бэлэн",
+	"collection-title-one": "Хаврын шинэ сүлжмэл",
+	"collection-title-three": "Өвлийн шинэ сүлжмэл",
+	"collection-title-two": "Гол хүртэл",
+	"contact-number-required": "Холбоо барих дугаар шаардлагатай",
+	"contact-success-message": "Имэйлийг амжилттай илгээсэн",
+	"credential-wrong": "Итгэмжлэх жуух бичиг буруу байсан!",
+	"delete-item-confirm": "Та устгахдаа итгэлтэй байна уу?",
+	"enough-permission": "Хангалттай зөвшөөрөлгүй байна",
+	"error-add-both-address": "Хүргэлтийн болон төлбөрийн хаягийг хоёуланг нь нэмнэ үү",
+	"error-city-required": "Хот шаардлагатай",
+	"error-country-required": "Улс шаардлагатай",
+	"error-heading": "Та төөрсөн юм шиг байна",
+	"error-state-required": "Улс шаардлагатай",
+	"error-street-required": "Гудамжны хаяг шаардлагатай",
+	"error-sub-heading": "Бид таны хайж буй хуудсыг олж чадахгүй байна",
+	"error-title-required": "Гарчиг шаардлагатай",
+	"error-zip-required": "ZIP шаардлагатай",
+	"feature-description-four": "Хэрэв та гишүүнчлэлийн хураамжаа хуримтлалд оруулахгүй бол бид зөрүүг буцаан олгох болно",
+	"feature-description-one": "Хэрэв та гишүүнчлэлийн хураамжаа хуримтлалд оруулахгүй бол бид зөрүүг буцаан олгох болно",
+	"feature-description-three": "",
+	"feature-description-two": "",
+	"feature-title-four": "",
+	"feature-title-one": "",
+	"feature-title-three": "Супер хурдан хүргэлт",
+	"feature-title-two": "Эрсдэлгүй туршаад үзээрэй",
+	"forgot-password-helper": "Бид танд нууц үгээ шинэчлэх холбоосыг илгээх болно",
+	"login-helper": "Имэйл болон нууц үгээрээ нэвтэрнэ үү",
+	"password-update-success": "Нууц үг амжилттай шинэчлэгдсэн",
+	"registration-helper": "Бүртгүүлснээр та манайхыг зөвшөөрч байна",
+	"support-heading": "Жинхэнэ хүнтэй ярилц",
+	"support-sub-heading": "",
+	"text-accept-cookies": "Күүкийг хүлээн авна уу",
+	"text-account": "Данс",
+	"text-account-address": "Хаяг",
+	"text-account-dashboard": "Бүртгэлийнхээ хяналтын самбараас та өөрийн",
+	"text-account-details": "дансны дэлгэрэнгүй",
+	"text-actions": "Үйлдэл",
+	"text-add": "Нэмэх",
+	"text-add-new": "Шинээр нэмэх",
+	"text-add-new-address": "Шинэ хаяг нэмэх",
+	"text-add-to-cart": "Картанд нэмэх",
+	"text-address": "Хаяг",
+	"text-address-colon": "Хаяг:",
+	"text-address-details": "Шуудангийн хайрцаг 14122 Коллинз гудамж West.Victoria",
+	"text-and": "болон",
+	"text-app-thumbnail": "Аппын өнгөц зураг",
+	"text-apply": "Өргөдөл гаргах",
+	"text-available": "Боломжтой",
+	"text-back-to": "Буцах",
+	"text-back-to-home": "Буцаад гэр лүүгээ",
+	"text-banner-thumbnail": "Баннерын өнгөц зураг",
+	"text-best-sellers": "Шилдэг борлуулалттай",
+	"text-billing": "Тооцоо хийх",
+	"text-billing-address": "Тооцооны хаяг",
+	"text-brand": "Брэнд",
+	"text-brand-colon": "Брэнд:",
+	"text-brand-thumbnail": "Брэндийн өнгөц зураг",
+	"text-brands": "Брэндүүд",
+	"text-browse-categories": "Ангилалуудыг үзэх",
+	"text-calculated-checkout": "Тооцоо хийх үед тооцоолсон",
+	"text-call-now": "Одоо залга",
+	"text-call-us": "Бидэн рүү залгаарай",
+	"text-card-thumbnail": "Картын өнгөц зураг",
+	"text-casual-wear": "Өдөр тутмын хувцас",
+	"text-category": "Ангилал",
+	"text-category-thumbnail": "Брэндийн ангилал",
+	"text-change-password": "Нууц үгээ солих",
+	"text-change-your-password": "Нууц үгээ солих",
+	"text-check-availability": "Боломжтой эсэхийг шалгана уу",
+	"text-choose-payment": "Төлбөрийн аргыг сонгоно уу",
+	"text-city": "",
+	"text-clear-all": "",
+	"text-close": "",
+	"text-cod-message": "",
+	"text-collection-list": "",
+	"text-collections": "",
+	"text-colors": "",
+	"text-confirm": "",
+	"text-contact": "",
+	"text-contact-number": "",
+	"text-cookies-title": "",
+	"text-country": "",
+	"text-coupon-required": "",
+	"text-dashboard": "",
+	"text-date": "",
+	"text-days": "",
+	"text-deliver-time": "",
+	"text-delivery-schedule": "",
+	"text-details": "",
+	"text-discount": "",
+	"text-discount-label": "",
+	"text-discount-tag": "",
+	"text-email": "",
+	"text-email-details": "",
+	"text-empty-cart": "",
+	"text-enter-coupon": "",
+	"text-exclusive": "",
+	"text-facebook": "",
+	"text-fashion": "",
+	"text-featured-categories": "",
+	"text-featured-products": "",
+	"text-filters": "",
+	"text-find-us-here": "",
+	"text-flash-sale": "",
+	"text-forgot-password": "",
+	"text-free": "",
+	"text-gateway-required": "",
+	"text-gender": "",
+	"text-get-in-touch": "",
+	"text-have-account": "",
+	"text-have-coupon": "",
+	"text-hello": "",
+	"text-hours": "",
+	"text-instagram": "",
+	"text-instagram-thumbnail": "",
+	"text-item": "",
+	"text-items": "",
+	"text-load-more-products": "",
+	"text-login": "",
+	"text-login-mobile": "",
+	"text-login-with-facebook": "",
+	"text-login-with-google": "",
+	"text-logout": "",
+	"text-man": "",
+	"text-manage-your": "",
+	"text-map": "",
+	"text-message-sub-order": "",
+	"text-mins": "",
+	"text-more-info": "",
+	"text-new-arrivals": "",
+	"text-new-year": "",
+	"text-newest": "",
+	"text-newsletter-subtitle": "",
+	"text-newsletter-title": "",
+	"text-no-account": "",
+	"text-no-address": "",
+	"text-no-best-selling-products-found": "",
+	"text-no-brands-found": "",
+	"text-no-categories-found": "",
+	"text-no-contact": "",
+	"text-no-delivery-time-found": "",
+	"text-no-email": "",
+	"text-no-featured-products-found": "",
+	"text-no-flash-products-found": "",
+	"text-no-google-map-key": "",
+	"text-no-on-selling-products-found": "",
+	"text-no-order-found": "",
+	"text-no-phone": "",
+	"text-no-products": "",
+	"text-no-products-found": "",
+	"text-no-result-found": "",
+	"text-note": "",
+	"text-now-call": "",
+	"text-oldest": "",
+	"text-on-selling-products": "",
+	"text-or": "",
+	"text-order": "",
+	"text-order-details": "",
+	"text-order-number": "",
+	"text-order-received": "",
+	"text-orders": "",
+	"text-otp-code": "",
+	"text-otp-send-failed": "",
+	"text-otp-verify-failed": "",
+	"text-page-checkout": "",
+	"text-page-contact-us": "Холбоо барих",
+	"text-page-explore": "",
+	"text-page-faq": "",
+	"text-page-header": "",
+	"text-page-my-account": "",
+	"text-page-order": "",
+	"text-page-privacy-policy": "",
+	"text-page-terms-of-service": "",
+	"text-pay-cash": "",
+	"text-pay-first": "",
+	"text-payment-method": "",
+	"text-phone": "",
+	"text-phone-details": "",
+	"text-policy": "",
+	"text-popularity": "",
+	"text-price": "",
+	"text-price-high-low": "",
+	"text-price-low-high": "",
+	"text-proceed-to-checkout": "",
+	"text-product": "",
+	"text-products": "",
+	"text-quantity": "",
+	"text-recent-orders": "",
+	"text-register": "",
+	"text-related-products": "",
+	"text-reset-password": "",
+	"text-save": "",
+	"text-search-result": "",
+	"text-secs": "",
+	"text-section-title": "",
+	"text-see-all-product": "",
+	"text-send-otp": "",
+	"text-shipping": "",
+	"text-shipping-address": "",
+	"text-shipping-calculation-label": "",
+	"text-shipping-charge": "",
+	"text-shipping-cost": "",
+	"text-shop": "",
+	"text-shop-by-category": "",
+	"text-shop-colon": "",
+	"text-shopping-cart": "",
+	"text-shops-title": "",
+	"text-sign-in": "",
+	"text-sku": "",
+	"text-social": "",
+	"text-sold": "",
+	"text-sorting-options": "",
+	"text-sports": "",
+	"text-state": "",
+	"text-status": "",
+	"text-street-address": "",
+	"text-sub-orders": "",
+	"text-sub-total": "",
+	"text-subscribe-description": "",
+	"text-subscribe-error": "",
+	"text-subscribe-heading": "",
+	"text-subscribe-now": "",
+	"text-subscribe-sending": "",
+	"text-subscribe-success": "",
+	"text-successfully-updated": "",
+	"text-summer-collection": "",
+	"text-support-thumbnail": "",
+	"text-tags": "",
+	"text-tax": "",
+	"text-tax-calculation-label": "",
+	"text-tax-checkout-calculation": "",
+	"text-tax-shipping-calculation": "",
+	"text-terms": "",
+	"text-testimonial": "",
+	"text-time-over": "",
+	"text-title": "",
+	"text-top-brands": "",
+	"text-top-products": "",
+	"text-total": "",
+	"text-total-amount": "",
+	"text-total-item": "",
+	"text-total-price": "",
+	"text-tracking-number": "",
+	"text-twitter": "",
+	"text-type": "",
+	"text-unit-price": "",
+	"text-update": "",
+	"text-update-address": "",
+	"text-verify-code": "",
+	"text-view": "",
+	"text-view-cart": "",
+	"text-view-details": "",
+	"text-visit-site": "",
+	"text-watch": "",
+	"text-website": "",
+	"text-website-colon": "",
+	"text-woman": "",
+	"text-your-order": "",
+	"text-youtube": "",
+	"text-zip": ""
 }
