--- a/apps/storefront/public/locales/mn/footer.json
+++ b/apps/storefront/public/locales/mn/footer.json
@@ -1,4 +1,9 @@
 {
+	"link-about-us": "",
+	"link-announcements": "",
+	"link-answer-center": "",
+	"link-contact-us": "",
+	"link-copyright": "",
 	"link-customer-support": "Хэрэглэгчийн дэмжлэг",
 	"link-discussion-boards": "Хэлэлцүүлгийн самбарууд",
 	"link-email": "yourexample@email.com",
@@ -6,5 +11,33 @@
 	"link-exchanges": "Буцах & Солилцоо",
 	"link-facebook": "Facebook",
 	"link-faq": "Түгээмэл асуулт, тусламж",
-	"link-giving-works": "Бүтээл өгөх"
+	"link-giving-works": "Бүтээл өгөх",
+	"link-instagram": "",
+	"link-kids-wear": "",
+	"link-men-wear": "",
+	"link-phone": "",
+	"link-privacy": "",
+	"link-return-policy": "",
+	"link-shipping": "",
+	"link-site-map": "",
+	"link-sports-wear": "",
+	"link-support-center": "",
+	"link-terms": "",
+	"link-twitter": "",
+	"link-women-wear": "",
+	"link-youtube": "",
+	"payment-jcb": "",
+	"payment-master-card": "",
+	"payment-paypal": "",
+	"payment-skrill": "",
+	"payment-visa": "",
+	"text-all-rights-reserved": "",
+	"text-copyright": "",
+	"widget-title-about": "",
+	"widget-title-community": "",
+	"widget-title-contact": "",
+	"widget-title-customer-care": "",
+	"widget-title-our-information": "",
+	"widget-title-social": "",
+	"widget-title-top-categories": ""
 }
