--- a/apps/storefront/public/locales/mn/forms.json
+++ b/apps/storefront/public/locales/mn/forms.json
@@ -9,8 +9,56 @@
 	"error-email-format": "Өгөгдсөн имэйл хаягийн формат буруу байна",
 	"error-email-required": "Та имэйл хаягаа оруулах шаардлагатай",
 	"error-min-code": "Код хамгийн багадаа 6 тэмдэгттэй байх ёстой",
+	"error-name-required": "",
+	"error-subject-required": "",
 	"first-name-required": "Нэрийг оруулах шаардлагатай",
 	"label-address": "Хаяг",
 	"label-city": "Хот/Хот",
-	"label-confirm-password-star": "Нууц үгээ баталгаажуулах*"
+	"label-confirm-password-star": "Нууц үгээ баталгаажуулах*",
+	"label-country": "",
+	"label-display-name": "",
+	"label-email": "",
+	"label-email-required": "",
+	"label-email-star": "",
+	"label-female": "",
+	"label-first-name": "",
+	"label-last-name": "",
+	"label-male": "",
+	"label-message": "",
+	"label-message-star": "",
+	"label-name": "",
+	"label-name-required": "",
+	"label-name-star": "",
+	"label-new-password": "",
+	"label-new-password-star": "",
+	"label-old-password": "",
+	"label-old-password-star": "",
+	"label-order-notes": "",
+	"label-password": "",
+	"label-password-star": "",
+	"label-phone": "",
+	"label-postcode": "",
+	"label-remember-me": "",
+	"label-save-information": "",
+	"label-save-review-information": "",
+	"label-state": "",
+	"label-street-address": "",
+	"label-subject": "",
+	"label-subject-star": "",
+	"label-your-rating": "",
+	"last-name-required": "",
+	"name-required": "",
+	"name-subject": "",
+	"password-new-required": "",
+	"password-old-required": "",
+	"password-required": "",
+	"phone-required": "",
+	"placeholder-email": "",
+	"placeholder-email-subscribe": "",
+	"placeholder-message": "",
+	"placeholder-name": "",
+	"placeholder-order-notes": "",
+	"placeholder-search": "",
+	"placeholder-subject": "",
+	"text-login-mobile": ""
 }
