--- a/apps/storefront/public/locales/mn/menu.json
+++ b/apps/storefront/public/locales/mn/menu.json
@@ -1,16 +1,75 @@
 {
 	"menu-404": "404",
+	"menu-admin": "",
+	"menu-backpacks": "",
+	"menu-belt-scarves": "",
+	"menu-blazers": "",
+	"menu-blazwers-coats": "",
 	"menu-boots": "Гутал",
 	"menu-bra": "Хөхний даруулга",
+	"menu-briefs": "",
+	"menu-casual-shirts": "",
+	"menu-casual-shoes": "",
+	"menu-casual-wear": "",
 	"menu-category": "Ангилал",
+	"menu-checkout": "",
+	"menu-classic": "",
+	"menu-clothing": "",
+	"menu-collection": "",
 	"menu-contact-us": "Холбоо барих",
+	"menu-demos": "",
+	"menu-dresses": "",
+	"menu-elegant": "",
+	"menu-faq": "",
+	"menu-fashion": "",
+	"menu-fashion-jewellers": "",
+	"menu-fine-jewellers": "",
+	"menu-flats": "",
+	"menu-footwear": "",
 	"menu-forget-password": "Нууц үг сэргээх",
+	"menu-formal-shirts": "",
+	"menu-gadgets": "",
+	"menu-handbags-wallets": "",
+	"menu-headphones": "",
+	"menu-heels": "",
+	"menu-jackets": "",
+	"menu-jewellers": "",
+	"menu-jumpsuits": "",
+	"menu-lingerie-sleepwear": "",
+	"menu-lipsticks": "",
+	"menu-makeup": "",
+	"menu-men-wear": "",
+	"menu-minimal": "",
+	"menu-modern": "",
 	"menu-my-account": "Хэрэглэгч",
 	"menu-order": "Захиалга",
 	"menu-pages": "Хуудаснууд",
+	"menu-plus-size": "",
+	"menu-premium-beauty": "",
+	"menu-privacy-policy": "",
+	"menu-refined": "",
 	"menu-search": "Хайх",
+	"menu-shops": "",
+	"menu-shorts-skirts": "",
+	"menu-shurgs": "",
 	"menu-sign-in": "Нэвтрэх",
 	"menu-sign-up": "Бүртгүүлэх",
+	"menu-skincare": "",
+	"menu-sleepwear": "",
+	"menu-smart-wearables": "",
+	"menu-sports-accessories": "",
+	"menu-sports-active-wear": "",
+	"menu-standard": "",
+	"menu-suits": "",
+	"menu-sunglasses-frames": "",
+	"menu-t-shirt": "",
+	"menu-terms-condition": "",
+	"menu-top-wear": "",
+	"menu-tops-shirts": "",
 	"menu-trendy": "Trendy",
-	"menu-users": "Хэрэглэгчид"
+	"menu-users": "Хэрэглэгчид",
+	"menu-vintage": "",
+	"menu-watches-wearables": "",
+	"menu-western-wear": "",
+	"menu-women-wear": ""
 }
