--- a/apps/storefront/public/locales/mn/common.json
+++ b/apps/storefront/public/locales/mn/common.json
@@ -82,7 +82,7 @@
 	"password-update-success": "Нууц үг амжилттай шинэчлэгдсэн",
 	"registration-helper": "Бүртгүүлснээр та манайхыг зөвшөөрч байна",
 	"support-heading": "Жинхэнэ хүнтэй ярилц",
-	"support-sub-heading": "",
+	"support-sub-heading": "Та хашаан дээр байна уу? Асуулт байна уу? Зөвлөмж хэрэгтэй байна уу? Гишүүн үйлчилгээ үргэлж туслахад бэлэн байдаг. Бидэнд мессеж илгээнэ үү.",
 	"text-accept-cookies": "Күүкийг хүлээн авна уу",
 	"text-account": "Данс",
 	"text-account-address": "Хаяг",
@@ -122,49 +122,49 @@
 	"text-change-your-password": "Нууц үгээ солих",
 	"text-check-availability": "Боломжтой эсэхийг шалгана уу",
 	"text-choose-payment": "Төлбөрийн аргыг сонгоно уу",
-	"text-city": "",
-	"text-clear-all": "",
-	"text-close": "",
-	"text-cod-message": "",
-	"text-collection-list": "",
-	"text-collections": "",
-	"text-colors": "",
-	"text-confirm": "",
-	"text-contact": "",
-	"text-contact-number": "",
-	"text-cookies-title": "",
-	"text-country": "",
-	"text-coupon-required": "",
-	"text-dashboard": "",
-	"text-date": "",
-	"text-days": "",
-	"text-deliver-time": "",
-	"text-delivery-schedule": "",
-	"text-details": "",
-	"text-discount": "",
-	"text-discount-label": "",
-	"text-discount-tag": "",
-	"text-email": "",
-	"text-email-details": "",
-	"text-empty-cart": "",
-	"text-enter-coupon": "",
-	"text-exclusive": "",
-	"text-facebook": "",
-	"text-fashion": "",
-	"text-featured-categories": "",
-	"text-featured-products": "",
-	"text-filters": "",
-	"text-find-us-here": "",
-	"text-flash-sale": "",
-	"text-forgot-password": "",
-	"text-free": "",
-	"text-gateway-required": "",
-	"text-gender": "",
-	"text-get-in-touch": "",
-	"text-have-account": "",
-	"text-have-coupon": "",
-	"text-hello": "",
-	"text-hours": "",
+	"text-city": "Хот",
+	"text-clear-all": "Бүгдийг цэвэрлэ",
+	"text-close": "ойрхон",
+	"text-cod-message": "Та бараагаа хүлээн авсны дараа төлнө үү!",
+	"text-collection-list": "Цуглуулгын жагсаалт",
+	"text-collections": "Цуглуулгууд",
+	"text-colors": "өнгө",
+	"text-confirm": "Баталгаажуулна уу",
+	"text-contact": "Холбоо барих",
+	"text-contact-number": "Холбогдох дугаар",
+	"text-cookies-title": "Энэ сайт нь таны туршлагыг сайжруулахын тулд күүки ашигладаг. Та дарснаар манай Нууцлалын бодлогыг зөвшөөрч байна.",
+	"text-country": "Улс",
+	"text-coupon-required": "Купон код шаардлагатай",
+	"text-dashboard": "Хяналтын самбар",
+	"text-date": "огноо",
+	"text-days": "Өдөр",
+	"text-deliver-time": "Хүргэлтийн хугацаа",
+	"text-delivery-schedule": "Хүргэлтийн хуваарь",
+	"text-details": "Дэлгэрэнгүй мэдээлэл",
+	"text-discount": "Хямдралтай",
+	"text-discount-label": "Хямдралтай",
+	"text-discount-tag": "1000 сая шинэ бараа: Нэмэлт 20% хямдралтай. Сонгосон зүйлс. Тэмдэглэгдсэн үнэ.",
+	"text-email": "И-мэйл",
+	"text-email-details": "example@example.com",
+	"text-empty-cart": "Таны карт хоосон байна.",
+	"text-enter-coupon": "Купон кодыг энд оруулна уу",
+	"text-exclusive": "Онцгой",
+	"text-facebook": "Facebook",
+	"text-fashion": "Загвар",
+	"text-featured-categories": "Онцолсон ангилалууд",
+	"text-featured-products": "Онцлох бүтээгдэхүүн",
+	"text-filters": "Шүүлтүүрүүд",
+	"text-find-us-here": "Биднийг эндээс олоорой",
+	"text-flash-sale": "Флаш хямдрал",
+	"text-forgot-password": "Нууц үгээ мартсан?",
+	"text-free": "Үнэгүй",
+	"text-gateway-required": "Гарц шаардлагатай",
+	"text-gender": "Хүйс",
+	"text-get-in-touch": "Холбоотой байх",
+	"text-have-account": "данстай юу?",
+	"text-have-coupon": "Та купонтой юу?",
+	"text-hello": "Сайн уу",
+	"text-hours": "Цаг",
 	"text-instagram": "",
 	"text-instagram-thumbnail": "",
 	"text-item": "",
