--- a/apps/storefront/public/locales/mn/common.json
+++ b/apps/storefront/public/locales/mn/common.json
@@ -71,10 +71,10 @@
 	"error-zip-required": "ZIP шаардлагатай",
 	"feature-description-four": "Хэрэв та гишүүнчлэлийн хураамжаа хуримтлалд оруулахгүй бол бид зөрүүг буцаан олгох болно",
 	"feature-description-one": "Хэрэв та гишүүнчлэлийн хураамжаа хуримтлалд оруулахгүй бол бид зөрүүг буцаан олгох болно",
-	"feature-description-three": "",
-	"feature-description-two": "",
-	"feature-title-four": "",
-	"feature-title-one": "",
+	"feature-description-three": "Хэрэв та гишүүнчлэлийн хураамжаа хуримтлалд оруулахгүй бол бид зөрүүг буцаан олгох болно",
+	"feature-description-two": "Хэрэв та гишүүнчлэлийн хураамжаа хуримтлалд оруулахгүй бол бид зөрүүг буцаан олгох болно",
+	"feature-title-four": "1000+ бүтээгдэхүүн өртгөөр нь үнэлэгддэг",
+	"feature-title-one": "Баталгаат хадгаламж",
 	"feature-title-three": "Супер хурдан хүргэлт",
 	"feature-title-two": "Эрсдэлгүй туршаад үзээрэй",
 	"forgot-password-helper": "Бид танд нууц үгээ шинэчлэх холбоосыг илгээх болно",
@@ -165,56 +165,56 @@
 	"text-have-coupon": "Та купонтой юу?",
 	"text-hello": "Сайн уу",
 	"text-hours": "Цаг",
-	"text-instagram": "",
-	"text-instagram-thumbnail": "",
-	"text-item": "",
-	"text-items": "",
-	"text-load-more-products": "",
-	"text-login": "",
-	"text-login-mobile": "",
-	"text-login-with-facebook": "",
-	"text-login-with-google": "",
-	"text-logout": "",
-	"text-man": "",
-	"text-manage-your": "",
-	"text-map": "",
-	"text-message-sub-order": "",
-	"text-mins": "",
-	"text-more-info": "",
-	"text-new-arrivals": "",
-	"text-new-year": "",
-	"text-newest": "",
-	"text-newsletter-subtitle": "",
-	"text-newsletter-title": "",
-	"text-no-account": "",
-	"text-no-address": "",
-	"text-no-best-selling-products-found": "",
-	"text-no-brands-found": "",
-	"text-no-categories-found": "",
-	"text-no-contact": "",
-	"text-no-delivery-time-found": "",
-	"text-no-email": "",
-	"text-no-featured-products-found": "",
-	"text-no-flash-products-found": "",
-	"text-no-google-map-key": "",
-	"text-no-on-selling-products-found": "",
-	"text-no-order-found": "",
-	"text-no-phone": "",
-	"text-no-products": "",
-	"text-no-products-found": "",
-	"text-no-result-found": "",
-	"text-note": "",
-	"text-now-call": "",
-	"text-oldest": "",
-	"text-on-selling-products": "",
-	"text-or": "",
-	"text-order": "",
-	"text-order-details": "",
-	"text-order-number": "",
-	"text-order-received": "",
-	"text-orders": "",
-	"text-otp-code": "",
-	"text-otp-send-failed": "",
+	"text-instagram": "Instagram",
+	"text-instagram-thumbnail": "Instagram өнгөц зураг",
+	"text-item": "Зүйл",
+	"text-items": "Зүйлүүд",
+	"text-load-more-products": "Илүү олон бүтээгдэхүүн ачаалах",
+	"text-login": "Нэвтрэх",
+	"text-login-mobile": "Гар утасны дугаараар нэвтэрнэ үү",
+	"text-login-with-facebook": "Facebook-ээр нэвтэрнэ үү",
+	"text-login-with-google": "Google-ээр нэвтэрнэ үү",
+	"text-logout": "Гарах",
+	"text-man": "Эр хүн",
+	"text-manage-your": "Удирдах",
+	"text-map": "Газрын зураг",
+	"text-message-sub-order": "Энэ захиалга нь олон үйлдвэрлэгчийн бүтээгдэхүүнтэй. Тиймээс бид энэ захиалгыг олон борлуулагчийн захиалгад хуваасан.",
+	"text-mins": "Мин",
+	"text-more-info": "Илүү мэдээлэл",
+	"text-new-arrivals": "Шинээр ирсэн",
+	"text-new-year": "Шинэ он",
+	"text-newest": "Хамгийн шинэ",
+	"text-newsletter-subtitle": "ChawkBazar-д бүртгүүлж, шинэ бараа, тусгай санал, урамшууллын талаар мэдээлэл аваарай.",
+	"text-newsletter-title": "Мөн шинэ цуглуулгын саналыг аваарай",
+	"text-no-account": "Бүртгэлгүй юу?",
+	"text-no-address": "Хаяг олдсонгүй",
+	"text-no-best-selling-products-found": "Шилдэг борлуулалттай бүтээгдэхүүн олдсонгүй!",
+	"text-no-brands-found": "Брэнд олдсонгүй",
+	"text-no-categories-found": "Ангилал олдсонгүй!",
+	"text-no-contact": "Харилцагч олдсонгүй",
+	"text-no-delivery-time-found": "Хүргэлтийн хуваарь олдсонгүй",
+	"text-no-email": "Имэйл олдсонгүй",
+	"text-no-featured-products-found": "Онцолсон бүтээгдэхүүн олдсонгүй!",
+	"text-no-flash-products-found": "Ямар ч флаш бүтээгдэхүүн олдсонгүй!",
+	"text-no-google-map-key": "Google газрын зургийн түлхүүр нэмээгүй",
+	"text-no-on-selling-products-found": "Борлуулах бүтээгдэхүүн олдсонгүй!",
+	"text-no-order-found": "Уучлаарай, захиалга олдсонгүй!",
+	"text-no-phone": "Утасны дугаар нэмээгүй байна",
+	"text-no-products": "Бүтээгдэхүүн олдсонгүй",
+	"text-no-products-found": "Уучлаарай, бүтээгдэхүүн олдсонгүй!",
+	"text-no-result-found": "Үр дүн олдсонгүй",
+	"text-note": "тэмдэглэл",
+	"text-now-call": "Одоо залга",
+	"text-oldest": "Хамгийн ахмад",
+	"text-on-selling-products": "Бүтээгдэхүүн борлуулах тухай",
+	"text-or": "эсвэл",
+	"text-order": "Захиалга",
+	"text-order-details": "захиалгын мэдээлэл",
+	"text-order-number": "Захиалгын дугаар",
+	"text-order-received": "Баярлалаа. Таны захиалгыг хүлээн авлаа.",
+	"text-orders": "Захиалга",
+	"text-otp-code": "OTP код",
+	"text-otp-send-failed": "OTP код илгээж чадсангүй",
 	"text-otp-verify-failed": "",
 	"text-page-checkout": "",
 	"text-page-contact-us": "Холбоо барих",
