--- a/apps/storefront/public/locales/mn/common.json
+++ b/apps/storefront/public/locales/mn/common.json
@@ -215,61 +215,61 @@
 	"text-orders": "Захиалга",
 	"text-otp-code": "OTP код",
 	"text-otp-send-failed": "OTP код илгээж чадсангүй",
-	"text-otp-verify-failed": "",
-	"text-page-checkout": "",
+	"text-otp-verify-failed": "OTP баталгаажуулалт амжилтгүй боллоо",
+	"text-page-checkout": "Тооцоо хийх",
 	"text-page-contact-us": "Холбоо барих",
-	"text-page-explore": "",
-	"text-page-faq": "",
-	"text-page-header": "",
-	"text-page-my-account": "",
-	"text-page-order": "",
-	"text-page-privacy-policy": "",
-	"text-page-terms-of-service": "",
-	"text-pay-cash": "",
-	"text-pay-first": "",
-	"text-payment-method": "",
-	"text-phone": "",
-	"text-phone-details": "",
-	"text-policy": "",
-	"text-popularity": "",
-	"text-price": "",
-	"text-price-high-low": "",
-	"text-price-low-high": "",
-	"text-proceed-to-checkout": "",
-	"text-product": "",
-	"text-products": "",
-	"text-quantity": "",
-	"text-recent-orders": "",
-	"text-register": "",
+	"text-page-explore": "судлах",
+	"text-page-faq": "Түгээмэл асуултууд",
+	"text-page-header": "Хуудасны гарчиг",
+	"text-page-my-account": "Миний данс",
+	"text-page-order": "Захиалга",
+	"text-page-privacy-policy": "Нууцлалын бодлого",
+	"text-page-terms-of-service": "Үйлчилгээний нөхцөл",
+	"text-pay-cash": "Хүргэлтийн үед бэлэн мөнгөөр төлнө.",
+	"text-pay-first": "Эхлээд төлнө үү",
+	"text-payment-method": "Төлбөрийн нөхцөл",
+	"text-phone": "Утас",
+	"text-phone-details": "+1 1234 5678 90, +1 0987 6543 21",
+	"text-policy": "Бодлого",
+	"text-popularity": "Алдартай байдал",
+	"text-price": "Үнэ",
+	"text-price-high-low": "Үнэ: өндөрөөс бага хүртэл",
+	"text-price-low-high": "Үнэ: бага ба өндөр",
+	"text-proceed-to-checkout": "Төлбөрийг үргэлжлүүлнэ үү",
+	"text-product": "Бүтээгдэхүүн",
+	"text-products": "Бүтээгдэхүүн",
+	"text-quantity": "Тоо хэмжээ",
+	"text-recent-orders": "сүүлийн үеийн захиалга",
+	"text-register": "Бүртгүүлэх",
 	"text-related-products": "",
 	"text-reset-password": "",
 	"text-save": "",
 	"text-search-result": "",
-	"text-secs": "",
-	"text-section-title": "",
-	"text-see-all-product": "",
-	"text-send-otp": "",
-	"text-shipping": "",
-	"text-shipping-address": "",
-	"text-shipping-calculation-label": "",
-	"text-shipping-charge": "",
-	"text-shipping-cost": "",
-	"text-shop": "",
-	"text-shop-by-category": "",
-	"text-shop-colon": "",
-	"text-shopping-cart": "",
-	"text-shops-title": "",
-	"text-sign-in": "",
-	"text-sku": "",
-	"text-social": "",
-	"text-sold": "",
-	"text-sorting-options": "",
-	"text-sports": "",
-	"text-state": "",
-	"text-status": "",
-	"text-street-address": "",
-	"text-sub-orders": "",
-	"text-sub-total": "",
+	"text-secs": "Сек",
+	"text-section-title": "Хэсгийн гарчиг",
+	"text-see-all-product": "Бүх бүтээгдэхүүнийг харах",
+	"text-send-otp": "OTP илгээх",
+	"text-shipping": "Хүргэлт",
+	"text-shipping-address": "Хүргэлтийн хаяг",
+	"text-shipping-calculation-label": "Тооцоолсон хүргэлт",
+	"text-shipping-charge": "Хүргэлтийн хураамж",
+	"text-shipping-cost": "Хүргэлтийн үнэ",
+	"text-shop": "Дэлгүүр",
+	"text-shop-by-category": "Ангилалаар дэлгүүр хэсээрэй",
+	"text-shop-colon": "Дэлгүүр:",
+	"text-shopping-cart": "Дэлгүүрийн түрдэг тэрэг",
+	"text-shops-title": "Таны ойролцоох супер дэлгүүрүүд",
+	"text-sign-in": "Нэвтрэн орно уу",
+	"text-sku": "ску",
+	"text-social": "Нийгмийн",
+	"text-sold": "Борлуулсан",
+	"text-sorting-options": "Эрэмбэлэх сонголтууд",
+	"text-sports": "Спорт",
+	"text-state": "Муж",
+	"text-status": "Статус",
+	"text-street-address": "Гудамжны хаяг",
+	"text-sub-orders": "Дэд захиалга",
+	"text-sub-total": "Дунд нийлбэр",
 	"text-subscribe-description": "",
 	"text-subscribe-error": "",
 	"text-subscribe-heading": "",
